--- a/Lab1.html
+++ b/Lab1.html
@@ -1,67 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Merienda+One&family=Roboto+Condensed&family=Yanone+Kaffeesatz:wght@500&display=swap" rel="stylesheet">
-  <title>Courses-AMZ Computer Education</title>
+    <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Merienda+One&family=Roboto+Condensed:ital,wght@0,700;1,300;1,400&family=Yanone+Kaffeesatz:wght@500&display=swap" rel="stylesheet">
+    <title>AMZ Computer Education</title>
 </head>
 <body style="background-color: rgb(212, 219, 186);">
-  <h1 style="font-family: 'Merienda One', cursive;;text-align: center;background-color:rgb(153, 31, 31);color:rgb(190, 231, 40);width: auto;margin:auto;font-size: 35px;">AMZ COMPUTER EDUCATION</h1>
+    <h1 style="font-family: 'Merienda One', cursive;;text-align: center;background-color:rgb(153, 31, 31);color:rgb(190, 231, 40);width: auto;margin:auto;font-size: 35px;">AMZ COMPUTER EDUCATION</h1>
   <h4 style="font-family: 'Roboto Condensed', sans-serif;;text-align: center;background-color:rgb(153, 31, 31);color:rgb(190, 231, 40);width: auto;margin: auto;font-size: 15px;text-decoration: underline;padding-bottom: 3px;">WE TEACH TECHNOLOGY</h4>
-  <img src="about us.jpg" style="width: 100%;height: 400px;border: 2px solid rgb(153, 31, 31);margin-top: 2px;" alt="">
-  <h3 style="font-family: 'Roboto Condensed', sans-serif;color: cornsilk;background-color: rgb(122, 13, 35);padding: 20px;width: 20%;">COURSES</h3>
-  <p style="font-family: 'Roboto Condensed',sans-serif;text-indent: 80px;padding: 30px;word-spacing: 2px;line-height: 29px;font-size: 20px;">
-    <strong>AMZ Computer Education</strong> is conveniently situated in <i>Singapore</i>. If you are deciding a best place for maximizing your knowledge, then you have come to the right spot. At AMZ Computer Education, we understand the market needs better than anyone else and train the students with variety of ammunitions that would help them to be successful in their respective industry.
+    <table border="2 black"style="margin:auto;">
+        <tr style="background-color:rgb(13, 27, 65);">
+            <th style="width:35%"><a href="about.html" style="font-family: 'Roboto Condensed', sans-serif;text-decoration: none;font-size:14px;color:cornflowerblue;">About Us</a></th>
+            <th style="width:35%"><a href="courses.html" style="font-family: 'Roboto Condensed', sans-serif;text-decoration: none;font-size:14px;color:cornflowerblue;">Courses Offered</a></th>
+            <th style="width:28%"><a href="videos.html" style="font-family: 'Roboto Condensed', sans-serif;text-decoration: none;font-size:14px;color:cornflowerblue;">Videos</a></th>
+            <th style="width:100%"><a href="mailto:amzcompusys@gmail.com" style="font-family: 'Roboto Condensed', sans-serif;text-decoration: none;font-size:14px;color:cornflowerblue;">Contact Us</a></th>
+        </tr>
+    </table>
+    <br>
+    <p>
+        <iframe width="100%" height="500" src="https://www.youtube.com/embed/7cXEOWAStq4?controls=0" frameborder="0" allow="accelerometer;autoplay=1; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </p>
+    <h3 style="font-family: 'Roboto Condensed', sans-serif;color: cornsilk;background-color: rgb(122, 13, 35);padding: 20px;width: 20%;">COMPUTERS</h3>
+    <br>
+    <p style="text-align: center;">
+        <img src="Computer pic.jpg" alt="computer picture" style="width: 100%;height:500px;">
+    </p>
+    <br>
+    <p style="font-family: 'Roboto Condensed', sans-serif;text-indent: 80px;font-size: 18px;
+    padding:30px;line-height: 28px;word-spacing: 1px;">
+    
+        A computer is a machine that can be instructed to carry out sequences of arithmetic or logical operations automatically via computer programming. Modern computers have the ability to follow generalized sets of operations, called programs. These programs enable computers to perform an extremely wide range of tasks. A "complete" computer including the hardware, the operating system (main software), and peripheral equipment required and used for "full" operation can be referred to as a computer system. This term may as well be used for a group of computers that are connected and work together, in particular a computer network or computer cluster.
 
-With AMZ Computer Education, you can be sure of receiving training that significantly increases your understanding retention and ability to apply new knowledge and skills to maximum effect. What’s more, we are so confident in our ability to deliver reliable, effective training that <u><b>unless you feel 100% satisfied</u> </b> that AMZ Computer Education delivered even more than you expected, there is no fee for your course attendance.
-  </p>
-  <h2 style="font-family:'Roboto Condensed',sans-serif;color: #EC1D25;padding-left: 30px;padding-top: 30px;padding-right: 30px;font-size: 30px;">
-    COURSES WE OFFERING</h2>
-  <ul style="list-style-type:disc;font-family:'Roboto Condensed',sans-serif;margin-left:49px;font-size: 29px;line-height: 50px;">
-    <li>Python</li>
-    <ul style="list-style-type: square type square;;font-size: 20px;line-height: 60px;background-color: darkgray;width: 60%;">
-      <li>Learn to use Python professionally, learning both Python 2 and Python 3!</li>
-      <li>Learn advanced Python features, like the collections module and how to work with timestamps!</li>
-      <li>Understand complex topics, like decorators.</li>
-      <li>Get an understanding of how to create GUIs in the Jupyter Notebook system!
-      </li>
-      <li>Learn to use Object Oriented Programming with classes!</li>
-    </ul>
+        Computers are used as control systems for a wide variety of industrial and consumer devices. This includes simple special purpose devices like microwave ovens and remote controls, factory devices such as industrial robots and computer-aided design, and also general purpose devices like personal computers and mobile devices such as smartphones. The Internet is run on computers and it connects hundreds of millions of other computers and their users.
+        Early computers were only conceived as calculating devices. Since ancient times, simple manual devices like the abacus aided people in doing calculations. Early in the Industrial Revolution, some mechanical devices were built to automate long tedious tasks, such as guiding patterns for looms. More sophisticated electrical machines did specialized analog calculations in the early 20th century. The first digital electronic calculating machines were developed during World War II. The first semiconductor transistors in the late 1940s were followed by the silicon-based MOSFET (MOS transistor) and monolithic integrated circuit (IC) chip technologies in the late 1950s, leading to the microprocessor and the microcomputer revolution in the 1970s. The speed, power and versatility of computers have been increasing dramatically ever since then, with MOS transistor counts increasing at a rapid pace (as predicted by Moore's law), leading to the Digital Revolution during the late 20th to early 21st centuries <a href="https://en.wikipedia.org/wiki/Computer"target="_blank" style="text-decoration: none;">Click here to learn more.</a></p>
     <hr>
-
-    <li>Ruby</li>
-      <ul style="list-style-type: square type square;;font-size: 20px;line-height: 60px;background-color: darkgray;width: 60%;">
-        <li>Learn about Ruby, an object-oriented scripting language you can use on its own or as part of the Ruby on Rails web framework.</li>
-        <li>Learn how to write more complex programs that can respond to user input.</li>
-        <li>Learn to use loops and iterators to automate repetitive tasks.
-        </li>
-        <li>
-          Learn about arrays and hashes, including how to iterate over these data structures.</li>
-        <li>
-          Learn how to define your own methods, as well as how to use blocks to develop powerful sorting algorithms.</li>
-      </ul> 
-      <hr>   
-    <li>SQL</li>
-      <ul style="list-style-type: square type square;;font-size: 20px;line-height: 60px;background-color: darkgray;width: 60%;">
-        <li>Use SQL to query a database</li>
-        <li>
-          Be comfortable putting SQL and PostgreSQL on their resume</li>
-        <li>Replicate real-world situations and query reports</li>
-        <li>Use SQL to perform data analysis</li>
-        <li>Learn to perform GROUP BY statements</li>
-      </ul>
-      <hr>
-    <li>Web Designing With HTML & CSS</li>
-      <ul style="list-style-type: square type square;;font-size: 20px;line-height: 60px;background-color: darkgray;width: 60%;">
-        <li>Create any website layout you can imagine</li>
-        <li>
-          Add tasteful animations and effects with CSS3</li>
-        <li>Support any device size with Responsive (mobile-friendly) Design</li>
-        <li>Use common vocabulary from the design industry</li>
-      </ul>
-      <hr>
-      <blockquote>This Page is created by Mohamed Zuhairi - (18ITR052)</blockquote>
-  </ul>
-  <h3 style="font-family: 'Roboto Condensed', sans-serif;color: cornsilk;background-color: rgb(122, 13, 35);padding: 15px;width: 100%;"><a href="index.html" style="color:whitesmoke;">Home</a></h3>
+    <h3>
+    <blockquote>This Page is created by Mohamed Zuhairi - (18ITR052)</blockquote>
+    </h3>
+    <hr>
+    <h3 style="font-family: 'Roboto Condensed', sans-serif;color: rgb(24, 121, 100);background-color:  #34495e;padding-top: 2px;padding-bottom: 2px;border: 2px solid  #34495e; border-radius: 25px;width: 100%;">
+        <ul style="list-style-type: none;">
+            <li><a href="login.html" style="color:whitesmoke;text-decoration: none;">Login</a></li>
+            <li><a href="join.html" style="color:whitesmoke;text-decoration: none;">Signup</a></li>
+        </ul>
+    </h3>
 </body>
 </html>
